fix footer on shopping bag page and add wishlist text to icon on tablet and mobile devices for product detail

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -739,6 +739,11 @@ a.add-review:hover{
         padding-bottom: 8rem;
         padding-top: 3rem;
     }
+
+    .bag-wrapper{
+        padding-top: 8rem;
+        padding-bottom: 22rem;
+    }
 }
 
 @media (min-width: 992px) {
@@ -760,6 +765,15 @@ a.add-review:hover{
 
 }
 
+@media (max-width: 992px) {
+
+    .bag-wrapper{
+        padding-top: 8rem;
+        padding-bottom: 14rem;
+    }
+
+}
+
 @media only screen and (max-width: 768px){
     .auth-footer {
         margin-top: 11rem;
@@ -771,6 +785,10 @@ a.add-review:hover{
         
     }
 
+    .bag-wrapper{
+        padding-top: 8rem;
+        padding-bottom: 8rem;
+    }
 }
 
 
@@ -861,6 +879,11 @@ a.add-review:hover{
     .logo-font{
         color:#dc3545;
         font-size:3.5rem;
+    }
+
+    .bag-wrapper{
+        padding-top: 6rem;
+        padding-bottom: 3rem;
     }
     
 
